Fix help center not showing and placeholder content being repeated

--- a/resources/style/content.scss
+++ b/resources/style/content.scss
@@ -120,6 +120,10 @@
   height: 100%;
   width: 100%;
   background-color: currentColor;
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-position: center;
 }
 
 .image-placeholder {
@@ -216,6 +220,10 @@
       background-color: currentColor;
       mask-image: url(~resources/icons/sort.svg);
       -webkit-mask-image: url(~resources/icons/sort.svg);
+      mask-repeat: no-repeat;
+      -webkit-mask-repeat: no-repeat;
+      mask-position: center;
+      -webkit-mask-position: center;
     }
   }
 
