--- a/widgets/Split/split.scss
+++ b/widgets/Split/split.scss
@@ -1,6 +1,5 @@
 .split {
   display: flex;
-  contain: strict;
 
   > :first-child {
     flex-shrink: 0;
